# labq-rag

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.cursor/rules/: comments.mdc  documentation.mdc  fastapi.mdc  langchain.mdc  python.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: config.yaml  logging.yaml  secrets.example.yaml
examples/: README.md  test_queries.json
scripts/: compare_results.py  eval_dataset.json  plot_results.py  run_experiment.py  run_retriever_experiments.py
src/: __init__.py  config.py  generator.py  indexer.py  logger.py  main.py  prompts.py  retriever.py  schemas.py
tests/: __init__.py
